[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Utilities/MenuStart.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu/background.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu/try.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu/try_selected.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu/quit.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Menu/quit_selected.png" type="Texture" id=6]

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 75.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 93.0
margin_top = 20.0
margin_right = 217.0
margin_bottom = 85.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 124.0
margin_bottom = 42.0
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 124.0
margin_bottom = 19.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 124.0
margin_bottom = 42.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
